[deprecation] Fix-up deprecated newInstance calls